# claude-code-project-memory-mcp

./: .gitignore  .mcp.json  CLAUDE.md  Claude.md  README.md  pip.conf  pyproject.toml
.claude/agents/: upgrade.md
design-docs/: 00-design-overview.md  005-design-npx-mcp-server.md  006-design-memory-inspector.md  02-data-architecture.md  03-security-architecture.md  10-library-design.md  20-backend-design.md  40-agent-design.md  50-integration-design.md  60-infrastructure-design.md  61-local-mcp-infrastructure.md
docker/: .env.example  Dockerfile  docker-compose.dev.yml  docker-compose.yml
inspector-ui/: .env.example  .gitignore  index.html  package.json  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
inspector-ui/server/: context.ts  index.ts
inspector-ui/server/middleware/: error-handler.ts  request-logger.ts
inspector-ui/server/routes/: config.ts  export-import.ts  graph.ts  index-files.ts  memories.ts  normalize.ts  search.ts  stats.ts
inspector-ui/src/: App.tsx  index.css  main.tsx
inspector-ui/src/__tests__/: setup.ts
inspector-ui/src/api/: client.ts  graph.ts  index.ts  memories.ts  search.ts  stats.ts
inspector-ui/src/hooks/: index.ts  use-graph.ts  use-memories.ts  use-search.ts  use-stats.ts
inspector-ui/src/pages/: BrowserPage.tsx  GraphPage.tsx  MaintenancePage.tsx  SearchPage.tsx  SettingsPage.tsx
mcp-server/: .gitignore  eslint.config.js  package-lock.json  package.json  tsconfig.json
mcp-server/src/: config.ts  context.ts  index.ts  server.ts
mock-src/: README.md  fixtures.py
mock-src/designs/: architecture.md
mock-src/go/: go.mod
mock-src/requirements/: requirements.md
project-docs/: 005-architecture-npx-mcp.md  005-task-list-npx-mcp-server.md  TASK-LIST-memory-system.md  architecture.md  code-review-integration.md  code-review-requirements.md  code-review-security.md  testing-strategy.md
project-docs/adrs/: ADR-001-mcp-server-transport.md  ADR-002-memory-storage-partitioning.md  ADR-003-embedding-pipeline.md  ADR-004-code-parsing-architecture.md  ADR-005-hybrid-query-engine.md  ADR-006-normalization-process.md  ADR-007-project-structure.md  ADR-008-cross-store-synchronization.md  ADR-009-local-mcp-architecture.md  ADR-010-typescript-mcp-server.md  ADR-011-memory-inspector-architecture.md
project-docs/schemas/: data-dictionary.md  graph-schema.cypher  memory-schemas.json  qdrant-collections.json
requirement-docs/: REQ-MEM-003-local-mcp-architecture.md  REQ-MEM-004-mcp-tool-access.md  REQ-MEM-005-npx-mcp-server.md  REQ-MEM-006-memory-inspector-ui.md  REQ-MEM-007-browser-details-enhancements.md  requirements-memory-docs.md
scripts/: reindex-project.ts
src/memory_service/: __init__.py  __main__.py  cli.py  config.py
src/tests/: __init__.py  conftest.py  conftest_mock_src.py
user-docs/: agent-memory-integration.md  api-reference.md  deployment-guide.md  integration-template.md  quick-reference.md
(+194 files in other folders)
