[project]
name = "memory-service"
version = "0.1.0"
description = "Claude Code Long-Term Memory System - Persistent memory infrastructure for complex, multi-session software development projects"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Claude Code", email = "noreply@anthropic.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "qdrant-client>=1.7.0",
    "neo4j>=5.0.0",
    "voyageai>=0.2.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "tree-sitter>=0.21.0,<0.22.0",
    "tree-sitter-languages>=1.8.0",
    "httpx>=0.24.0",
    "structlog>=23.0.0",
    "prometheus-client>=0.17.0",
    "click>=8.0.0",
    "pathspec>=0.11.0",
    "aiosqlite>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-timeout>=2.2.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "testcontainers>=3.7.0",
    "faker>=18.0.0",
]

[project.scripts]
memory-service = "memory_service.__main__:main"
memory-cli = "memory_service.api.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/memory_service"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["src/tests"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true

[[tool.mypy.overrides]]
module = [
    "voyageai.*",
    "tree_sitter.*",
    "tree_sitter_languages.*",
    "qdrant_client.*",
    "neo4j.*",
    "prometheus_client.*",
]
ignore_missing_imports = true

[tool.ruff]
target-version = "py312"
line-length = 120
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "W",      # pycodestyle warnings
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.isort]
known-first-party = ["memory_service"]

[tool.coverage.run]
source = ["src/memory_service"]
branch = true
omit = ["*/tests/*", "*/__main__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
fail_under = 80
